# annbenmark

./: .gitignore  CMakeLists.txt  README.md  test.cpp  test_annoy.cpp  test_nsg.cpp
ann/: AnnBase.cpp  AnnBase.h  AnnInterface.h  Annoy.cpp  Annoy.h  Nsg.cpp  Nsg.h
dataset/siftsmall/: result.txt  test_ann
jni/: README.md
jni/nsg_ann/: pom.xml
jni/nsg_ann/src/: nsgtest.java
jni/nsg_ann/src/com/nsg/test/: AnnBase.java  AnnResult.java  Neighbor.java  Nsg.java  SWIGTYPE_p_double.java  SWIGTYPE_p_float.java  SWIGTYPE_p_int.java  SWIGTYPE_p_std__mapT_int_double_t.java  SWIGTYPE_p_std__vectorT_efanna2e__Neighbor_t.java  SWIGTYPE_p_std__vectorT_float_t.java  SWIGTYPE_p_std__vectorT_int_t.java  SWIGTYPE_p_std__vectorT_std__vectorT_float_t_t.java  VecVecFloat.java  VectorOfFloat.java  VectorOfNeighbor.java  nsgann.java  nsgannJNI.java  swig_wrap.cxx
jni/nsg_ann/src/main/java/: nsgtest.java
jni/nsg_ann/src/main/java/com/nsg/: AnnBase.java  Neighbor.java  Nsg.java  SWIGTYPE_p_double.java  SWIGTYPE_p_float.java  SWIGTYPE_p_int.java  SWIGTYPE_p_std__mapT_int_double_t.java  SWIGTYPE_p_std__vectorT_int_t.java  VecVecFloat.java  VectorOfFloat.java  VectorOfNeighbor.java  neighbor.h  nsgann.java  nsgannJNI.java  swig.i  swig_wrap.cxx
test/: test_nsg.cpp
util/: AnnInterface.h  SiftUtil.cpp  SiftUtil.h  nsg.h
